--- a/vscode_settings_win.json
+++ b/vscode_settings_win.json
@@ -1,6 +1,6 @@
 {
     // global 
-    "workbench.iconTheme": "material-icon-theme",
+    // "workbench.iconTheme": "jetbrains-icon-theme",
     "editor.fontFamily": "JetBrains Mono",
     "editor.fontLigatures": true,
     "terminal.integrated.fontFamily": "JetBrains mono",
@@ -53,4 +53,14 @@
         "runtest": true
     },
     "go.useLanguageServer": true,
+
+
+    "workbench.iconTheme": "vscode-jetbrains-icon-theme",
+    "workbench.colorCustomizations": {
+        // "terminal.foreground": "#37FF13",
+        // "terminal.background": "#2b2424"
+    },
+    "window.zoomLevel": -1
+
+
 }
